--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   geolocator: ^7.7.1
   google_maps_flutter: ^2.1.1
+  location: ^2.3.5
+  url_launcher: ^5.0.2
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   cloud_firestore: ^3.1.0
