--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^3.1.0
   firebase_storage: ^10.1.0
   firebase_messaging: ^11.1.0
+  google_place: ^0.4.3
 
 
 dev_dependencies:
