--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_storage: ^10.1.0
   firebase_messaging: ^11.1.0
   google_place: ^0.4.3
+  flutter_google_places: ^0.3.0
+  location: ^4.3.0
 
 
 dev_dependencies:
