--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   geolocator: ^7.7.1
+  dio: ^4.0.4
   google_maps_flutter: ^2.1.1
+  dependencies:
+  flutter_polyline_points: ^1.0.0
   location: ^4.3.0
   url_launcher: ^5.0.2
   firebase_core: ^1.10.0
