--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - images/image.png
+    - images/marker.png
+    - images/markerr.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
